# clog

./: .clangd  .gitignore  Cargo.toml  LICENSE  README.md  compile_commands.json  flake.nix  makefile
example/content/: index.md
example/content/Posts/: 000-nested.md
example/static/: index.css
example/templates/: index.html
src/: config.rs  file.rs  frontmatter.rs  fs_utils.rs  main.c  main.rs  markdown.rs  sitemap.rs  slug.rs  wikilink.rs
src/markdown/: counter.rs
